--- a/static/file-finder.css
+++ b/static/file-finder.css
@@ -1,4 +1,4 @@
-#app-vertical > .file-finder {
+.file-finder {
   position: absolute;
   width: 100%;
   bottom: 0;
